# cdk/OpenAPI_Swagger_Definition.yaml
@@ -71,104 +71,6 @@ x-common-options: &commonOptions
             application/json: |
               {}
 paths:
-  /student/text_generation:
-    options:
-      summary: CORS support
-      description: |
-        Enable CORS by returning correct headers
-      responses:
-        200:
-          $ref: "#/components/responses/Success"
-      x-amazon-apigateway-integration:
-        type: mock
-        requestTemplates:
-          application/json: |
-            {
-              "statusCode" : 200
-            }
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
-              method.response.header.Access-Control-Allow-Methods: "'*'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-            responseTemplates:
-              application/json: |
-                {}
-    post:
-      tags:
-        - Student
-      summary: Generate a response from the LLM
-      operationId: student_text_generation_POST
-      parameters:
-        - in: query
-          name: course_id
-          required: true
-          description: ID of the course
-          schema:
-            type: string
-        - in: query
-          name: session_id
-          required: true
-          description: ID of the session since multiple sessions can exist within a table
-          schema:
-            type: string
-        - in: query
-          name: module_id
-          required: true
-          description: ID of the module used to find the module name which becomes the conversation's label
-          schema:
-            type: string
-        - in: query
-          name: session_name
-          required: false
-          description: Name of the session passed from the front-end after it has been created by the LLM
-          schema:
-            type: string
-      requestBody:
-        required: false
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                message_content:
-                  type: string
-                  description: Content of the student's message
-      responses:
-        "200":
-          description: Response with generated array and input value
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  session_name:
-                    type: string
-                    description: Name of the session which becomes the conversation's label
-                  llm_output:
-                    type: string
-                    description: Response generated by the LLM
-                  llm_verdict:
-                    type: string
-                    description: Judgement of the LLM whether the student has achieved mastery over the module
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "429":
-          description: Too Many Requests
-        "500":
-          description: Internal Server Error
-      security:
-        - studentAuthorizer: []
-      x-amazon-apigateway-integration:
-        uri:
-          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${TextGenLambdaDockerFunc.Arn}/invocations"
-        passthroughBehavior: "when_no_match"
-        httpMethod: "POST"
-        type: "aws_proxy"
   /student/chatbot-v2:
     options:
       summary: CORS support
@@ -924,196 +826,6 @@ paths:
                   session_id:
                     type: string
                     description: ID of the deleted session
-        "400":
-          description: Invalid value or missing parameter
-        "401":
-          description: Unauthorized
-        "429":
-          description: Too Many Requests
-        "500":
-          description: Internal Server Error
-      security:
-        - studentAuthorizer: []
-      x-amazon-apigateway-integration:
-        uri:
-          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${studentFunction.Arn}/invocations"
-        passthroughBehavior: "when_no_match"
-        httpMethod: "POST"
-        type: "aws_proxy"
-  /student/create_message:
-    options:
-      summary: CORS support
-      description: |
-        Enable CORS by returning correct headers
-      responses:
-        200:
-          $ref: "#/components/responses/Success"
-      x-amazon-apigateway-integration:
-        type: mock
-        requestTemplates:
-          application/json: |
-            {
-              "statusCode" : 200
-            }
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
-              method.response.header.Access-Control-Allow-Methods: "'*'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-            responseTemplates:
-              application/json: |
-                {}
-    post:
-      tags:
-        - Student
-      summary: Create a message for a session
-      operationId: student_create_message_POST
-      parameters:
-        - in: query
-          name: session_id
-          required: true
-          description: ID of the session where the message is sent
-          schema:
-            type: string
-        - in: query
-          name: email
-          required: true
-          description: Email of the student sending the message
-          schema:
-            type: string
-        - in: query
-          name: course_id
-          required: true
-          description: ID of the course related to the session
-          schema:
-            type: string
-        - in: query
-          name: module_id
-          required: true
-          description: ID of the module related to the session
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                message_content:
-                  type: string
-                  description: Content of the message
-      responses:
-        "200":
-          description: Message created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  session_id:
-                    type: string
-                    description: ID of the session where the message was created
-                  message_content:
-                    type: string
-                    description: Content of the created message
-        "400":
-          description: Invalid value or missing parameter
-        "401":
-          description: Unauthorized
-        "429":
-          description: Too Many Requests
-        "500":
-          description: Internal Server Error
-      security:
-        - studentAuthorizer: []
-      x-amazon-apigateway-integration:
-        uri:
-          Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${studentFunction.Arn}/invocations"
-        passthroughBehavior: "when_no_match"
-        httpMethod: "POST"
-        type: "aws_proxy"
-  /student/create_ai_message:
-    options:
-      summary: CORS support
-      description: |
-        Enable CORS by returning correct headers
-      responses:
-        200:
-          $ref: "#/components/responses/Success"
-      x-amazon-apigateway-integration:
-        type: mock
-        requestTemplates:
-          application/json: |
-            {
-              "statusCode" : 200
-            }
-        responses:
-          default:
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
-              method.response.header.Access-Control-Allow-Methods: "'*'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-            responseTemplates:
-              application/json: |
-                {}
-    post:
-      tags:
-        - Student
-      summary: Create an AI response message for a session
-      operationId: student_create_ai_message_POST
-      parameters:
-        - in: query
-          name: session_id
-          required: true
-          description: ID of the session where the message is sent
-          schema:
-            type: string
-        - in: query
-          name: email
-          required: true
-          description: Email of the student associated with the session
-          schema:
-            type: string
-        - in: query
-          name: course_id
-          required: true
-          description: ID of the course related to the session
-          schema:
-            type: string
-        - in: query
-          name: module_id
-          required: true
-          description: ID of the module related to the session
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                message_content:
-                  type: string
-                  description: Content of the AI's message
-      responses:
-        "200":
-          description: AI message created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  session_id:
-                    type: string
-                    description: ID of the session where the message was created
-                  message_content:
-                    type: string
-                    description: Content of the AI's created message
         "400":
           description: Invalid value or missing parameter
         "401":
